# localreader

./: CMakeLists.txt  CompareHistograms.cpp  Dpt.cpp  Event.h  EventProcessor.cpp  EventProcessor.h  MultipRatio.cpp  README.md  compHistoJun34.cpp  cos2ratio.cpp  cratio.cpp  createtxt.cpp  dcFiducialCuts.hpp  draft4txtfile.cpp  file_paths1.txt  histograms.hpp  linspace.hpp  main.cpp  plot_main2D.cpp  reboot.cpp  sratio.cpp  targetcomp.cpp  testcratio.cpp  testroot.cpp  threecomp.cpp  tryRatio.cpp  variablecalc.cpp  variablecalc.hpp  variables.hpp  veccreat.cpp  vectors.hpp
CleanCode/: CMakeLists.txt  CutSet.cpp  CutSet.h  Cuts.cpp  Cuts.h  Dpt.cpp  Dpt.h  Event.cpp  Event.h  EventProcessor.cpp  EventProcessor.h  EventReader.cpp  EventReader.h  FilePathGenerator.cpp  FilePathGenerator.h  Monitoring.cpp  Monitoring.h  Monunfold.cpp  Monunfold.h  Particle.cpp  Particle.h  Ratio.cpp  Ratio.h  c2ratio.cpp  c2ratio.h  computeC2plots.cpp  computeCplots.cpp  computeRplots.cpp  computeRplots_C1C2.cpp  computeRplots_noPhi.cpp  computeRplots_unf_noPhi.cpp  computeplotsDpt_nophih.cpp  constants.h  cratio.cpp  cratio.h  electronCountsR.cpp  emc_compare.cpp  fbinning.cpp  fbinning.h  file_paths.txt  (+24 more)
